dang lam web UI

--- a/UI/public/index.html
+++ b/UI/public/index.html
@@ -568,7 +568,7 @@
       },
 
       mounted() {
-        this.loadOrders();
+        // Đã bỏ tự động load, chỉ load khi click nút
       },
     }).mount('#app');
   </script>
