--- a/UI/public/index.html
+++ b/UI/public/index.html
@@ -501,6 +501,8 @@
                 customerId: order.customer_id,
                 orderDetails: order.products,
                 shopId: order.shop_id,
+                note_xuatkho: order.note_xuatkho,
+                note:order.note,
               }),
             });
 
