--- a/UI/public/index.html
+++ b/UI/public/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="vi">
 
 <head>
@@ -78,6 +78,7 @@
           <div class="order-header">
             <span class="order-id" @click="copyOrderInfo(order)" style="cursor: pointer;">📦 Đơn #{{ order.order_id
               }}</span>
+            <span class="copy-icon" @click.stop="copyOrderDetailsToJson(order)" title="Copy chi tiết đơn hàng">📋</span>
             <span class="order-status" :class="`status-${order.status || 'pending'}`">
               {{ statusLabel(order.status) }}
             </span>
@@ -166,8 +167,8 @@
   </div>
 
   <!-- Load JavaScript -->
-  <script src="js/api.service.js"></script>
-  <script src="js/app.js"></script>
+  <script src="js/api.service.js?v=5"></script>
+  <script src="js/app.js?v=5"></script>
 </body>
 
 </html>
