--- a/UI/public/index.html
+++ b/UI/public/index.html
@@ -125,6 +125,11 @@
             <input v-model="nccOrderId" type="text" placeholder="Nhập mã đơn NCC"
               style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 4px;">
           </div>
+          <label style="display: block; margin-bottom: 5px; font-weight: bold;">Ngày NCC xuất đơn:</label>
+          <input v-model="nccOrderDate" type="date" placeholder="Nhập ngày"
+            style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 4px;">
+
+
         </div>
         <div class="modal-actions">
           <button class="btn-cancel" @click="closeNccShipDialog" :disabled="uploadingNccShip">Hủy</button>
